@@ -1,5 +1,8 @@
 2001-05-10  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* w3m-xmas.el (w3m-insert-image): Remove `face' property from a
+	text behind an image.
+
 	* w3m-e21.el (w3m-remove-image): Use a regular plist in the arg of
 	`remove-text-properties'.
 	* w3m.el (w3m-toggle-inline-images): Ditto.
